--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,16 @@
+<h2 class="colorBlue">Den Talende Skraldespand (Logget ind)</h2>
+<p>Her kan du tilføje lyde til databasen, justere generelle indstillinger og modificere den enkelte skraldespand.</p>
+<br>
 <h4 class="colorBlue">Upload lydfil til databasen</h4>
 <form action="/" class="md-form">
     <div class="file-field">
         <div class="btn btn-primary btn-sm float-left">
-            <input type="file" name="sound" accept="audio/*">
+            <input class="inputWidth" type="file" name="sound" accept="audio/*">
         </div>
         <input type="submit" class="btn btn-primary submitBtn">
     </div>
 </form>
-<br>
+<br><br>
 <h4 class="colorBlue">Modificer en konkret skraldespand</h4>
 <div class="row">
     <div class="col-4">
