--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,15 +6,11 @@
 <form action="/audioupload" method="POST" enctype="multipart/form-data" class="md-form">
     <div class="file-field">
         <div class="btn btn-primary btn-sm float-left">
-
             <input type="file" accept="audio/*" id="capture" capture="audio" name="file" class="inputWidth">
         </div>
     </div>
     <input type="submit" value="Indsend" class="btn btn-primary submitBtn">
 </form>
-<hr>
-
-
 <br><br>
 <h4 class="colorBlue">Modificer en konkret skraldespand</h4>
 <div class="row">
@@ -32,18 +28,19 @@
     </div>
     <div class="col-8">
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="list-spand1" role="tabpanel" aria-labelledby="list-spand1-list">{{#if files}}
-{{#each files}}
-<div class="card card-body mb-3">
-    <audio controls>
-        <source src="audio/{{filename}}" type="audio/mp4">Din browser understøtter ikke denne filtype!</audio>
-    <form method="PUT" action="/audio/{{_id}}.mp4?_method=PUT"></form>
-    <form method="POST" action="/files/go/{{_id}}">
-        <button class="btn btn-danger btn-block mt-4">Slet lyd</button>
-    </form>
-</div>
-{{/each}}
-{{/if}}</div>
+            <div class="tab-pane fade show active" id="list-spand1" role="tabpanel" aria-labelledby="list-spand1-list">{{#if
+                files}}
+                {{#each files}}
+                <div class="card card-body mb-3">
+                    <audio controls>
+                        <source src="audio/{{filename}}" type="audio/mp4">Din browser understøtter ikke denne filtype!</audio>
+                    <form method="PUT" action="/audio/{{_id}}.mp4?_method=PUT"></form>
+                    <form method="POST" action="/files/go/{{_id}}">
+                        <button class="btn btn-danger btn-block mt-4">Slet lyd</button>
+                    </form>
+                </div>
+                {{/each}}
+                {{/if}}</div>
             <div class="tab-pane fade" id="list-spand2" role="tabpanel" aria-labelledby="list-spand2-list">(Ikke aktiv)</div>
             <div class="tab-pane fade" id="list-spand3" role="tabpanel" aria-labelledby="list-spand3-list">(Ikke aktiv)</div>
             <div class="tab-pane fade" id="list-spand4" role="tabpanel" aria-labelledby="list-spand4-list">(Ikke aktiv)</div>
