--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,8 +28,8 @@
     </div>
     <div class="col-8">
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="list-spand1" role="tabpanel" aria-labelledby="list-spand1-list">{{#if
-                files}}
+            <div class="tab-pane fade show active" id="list-spand1" role="tabpanel" aria-labelledby="list-spand1-list">
+                {{#if files}}
                 {{#each files}}
                 <div class="card card-body mb-3">
                     <audio controls>
